Fix independent column scroll
Our Bootstrap 5 upgrade in af939f973bee96c35f1b2b66219ca27b9efb46bc
removed some scss that was required for our columns to scroll
independently. Add this scss back in so that each column gets its own
scrollbar.

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,16 @@
   }
 }
 
+/* Make the container fill the window vertically, less the navbar.
+ * This is required to make each column scroll independently. */
+.navbar {
+  height: 4rem;
+  font-family: "Open Sans", sans-serif;
+}
+.column-container {
+  height: calc(100% - 4rem);
+}
+
 /* 100% height to fill vertically so we can scroll columns. */
 .swiper-container {
   height: 100%;
